--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
 
           <ul class="whoWeAre__img-list">
             <li class="whoWeAre__item">
-              <img
-                src="./images/whoWeAre/img1@1x.png 1x, ./images/whoWeAre/img1@2x.png 2x"
+              <img src="./images/whoWeAre/img1@1x.png 1x, ./images/whoWeAre/img1@2x.png 2x"
                 alt="puzzle item"
                 class="item-img"
                 srcset="./images/whoWeAre/img1@1x.png"
