--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
+    <!-- Favicon -->
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
     <!-- Styles -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -30,7 +32,7 @@
 
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="" class="nav__link">Services</a></li>
+            <li class="nav__item"><a href=""  class="nav__link">Services</a></li>
             <li class="nav__item">
               <a href="" class="nav__link">Solid Teams</a>
             </li>
@@ -42,7 +44,7 @@
             <li class="nav__item"><a href="" class="nav__link">Blog</a></li>
           </ul>
         </nav>
-        <button class="header__btn" type="button">Contact Us</button>
+        <a class="header__btn">Contact Us</a>
       </div>
     </header>
 
@@ -60,7 +62,7 @@
             </p>
           </div>
           <div class="hero__bottom-wrap">
-            <button class="hero__btn" type="button">Let’s Talk Buisness</button>
+            <a class="hero__btn">Let’s Talk Buisness</a>
 
             <ul class="hero__img-list">
               <li class="hero__img-item">
@@ -218,7 +220,7 @@ shield"
           <ul class="whoWeAre__list">
             <li class="whoWeAre__list-item">
               <p class="list-item__title">
-                Meet any gap in your team’s skill set
+                Meet any gap <br> in your team’s skill set
               </p>
               <p class="list-item__text">
                 <span>We help you find a perfect talent of any level</span> and
@@ -227,7 +229,7 @@ shield"
             </li>
             <li class="whoWeAre__list-item">
               <p class="list-item__title">
-                Reduce resourcing costs by up to 50%
+                Reduce resourcing <br> costs by up to 50%
               </p>
               <p class="list-item__text">
                 <span>We reduce your resourcing costs</span> by taking over the
@@ -237,7 +239,7 @@ shield"
             </li>
             <li class="whoWeAre__list-item">
               <p class="list-item__title">
-                Deliver your product to market faster
+                Deliver your <br> product to market faster
               </p>
               <p class="list-item__text">
                 Leverage our software outstaffing, facilities, technology, and
@@ -247,9 +249,9 @@ shield"
             </li>
           </ul>
 
-          <button class="whoWeAre__btn" type="button">
+          <a class="whoWeAre__btn">
             Let’s Talk Buisness
-          </button>
+          </a>
         </div>
       </section>
 
@@ -264,7 +266,7 @@ shield"
             half a billion of funding.
           </p>
 
-          <button class="works__btn" type="button">View all works</button>
+          <a class="works__btn">View all works</a>
         </div>
       </section>
 
@@ -315,6 +317,7 @@ shield"
           />
         </div>
       </section>
+      
       <!-- Coinloan -->
       <section class="coinloan">
         <div class="container coinloan-container">
@@ -327,41 +330,41 @@ shield"
           </p>
           <ul class="coinloan__btn-list">
             <li class="coinloan__btn-list-item">
-              <button class="coinloan__list-btn" type="button">FinTech</button>
+              <a class="coinloan__list-btn">FinTech</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <button class="coinloan__list-btn" type="button">
+              <a class="coinloan__list-btn" >
                 Front-end development
-              </button>
+              </a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <button class="visually-hidden" type="button">Research</button>
+              <a class="visually-hidden" >Research</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <button class="coinloan__list-btn" type="button">Research</button>
+              <a class="coinloan__list-btn">Research</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <button class="coinloan__list-btn" type="button">
+              <a class="coinloan__list-btn" >
                 UX/UI Design
-              </button>
+              </a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <button class="coinloan__list-btn" type="button">
+              <a class="coinloan__list-btn">
                 Maintenance support
-              </button>
+              </a>
             </li>
           </ul>
-          <button type="button" class="coinloan__btn">
+          <a class="coinloan__btn">
             Read full case study
             <svg class="btn_icon" width="24" height="24">
               <use href="./images/icons.svg#plus"></use>
             </svg>
-          </button>
+          </a>
         </div>
       </section>
     </main>
