--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="HandheldFriendly" content="True">
+    <meta name="keywords" content="web design, web development">
     <title>Document</title>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,17 +36,17 @@
           <ul class="nav__list">
             <li class="nav__item"><a href=""  class="nav__link">Services</a></li>
             <li class="nav__item">
-              <a href="" class="nav__link">Solid Teams</a>
+              <a href="" name="navigation" class="nav__link">Solid Teams</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">Processes</a>
+              <a href="" name="navigation" class="nav__link">Processes</a>
             </li>
-            <li class="nav__item"><a href="" class="nav__link">Works</a></li>
-            <li class="nav__item"><a href="" class="nav__link">About Us</a></li>
-            <li class="nav__item"><a href="" class="nav__link">Blog</a></li>
+            <li class="nav__item"><a href="" name="navigation" class="nav__link">Works</a></li>
+            <li class="nav__item"><a href="" name="navigation" class="nav__link">About Us</a></li>
+            <li class="nav__item"><a href="" name="navigation" class="nav__link">Blog</a></li>
           </ul>
         </nav>
-        <a class="header__btn">Contact Us</a>
+        <a class="header__btn" name="header-button">Contact Us</a>
       </div>
     </header>
 
@@ -62,11 +64,11 @@
             </p>
           </div>
           <div class="hero__bottom-wrap">
-            <a class="hero__btn">Let’s Talk Buisness</a>
+            <a class="hero__btn" name="hero-button">Let’s Talk Buisness</a>
 
             <ul class="hero__img-list">
               <li class="hero__img-item">
-                <a href="">
+                <a href="" name="reward-link">
                   <img
                     srcset="
                       ./images/hero/img1@1x.png 1x,
@@ -79,7 +81,7 @@
                 </a>
               </li>
               <li class="hero__img-item">
-                <a href="">
+                <a href="" name="reward-link">
                   <img
                     srcset="
                       ./images/hero/img2@1x.png 1x,
@@ -92,7 +94,7 @@
                 </a>
               </li>
               <li class="hero__img-item">
-                <a href="">
+                <a href="" name="reward-link">
                   <img
                     srcset="
                       ./images/hero/img3@1x.png 1x,
@@ -107,7 +109,7 @@
             </ul>
             <p class="hero__img-text">
               Leading review and rating platforms <br />
-              <span>name us the top development company </span>
+              <strong>name us the top development company </strong>
             </p>
           </div>
         </div>
@@ -135,11 +137,11 @@
               investor funding, and received recognition from Apple,
               Y-Combinator and Forbes.
             </p>
-            <p class="benefits__text-bold">
+            <strong class="benefits__text-bold">
               In less than four weeks, you get a fully-equipped, highly-skilled,
               hand-picked offshore team on board and ready to help you to
               skyrocket your project.
-            </p>
+            </strong>
           </div>
         </div>
       </section>
@@ -223,7 +225,7 @@ shield"
                 Meet any gap <br> in your team’s skill set
               </p>
               <p class="list-item__text">
-                <span>We help you find a perfect talent of any level</span> and
+                <strong>We help you find a perfect talent of any level</strong> and
                 skill set to complement your team and grow your project.
               </p>
             </li>
@@ -232,7 +234,7 @@ shield"
                 Reduce resourcing <br> costs by up to 50%
               </p>
               <p class="list-item__text">
-                <span>We reduce your resourcing costs</span> by taking over the
+                <strong>We reduce your resourcing costs</strong> by taking over the
                 training, team management, and task allocation work for the
                 integrated expert.
               </p>
@@ -244,12 +246,12 @@ shield"
               <p class="list-item__text">
                 Leverage our software outstaffing, facilities, technology, and
                 project management services to
-                <span>speed up product delivery.</span>
+                <strong>speed up product delivery.</strong>
               </p>
             </li>
           </ul>
 
-          <a class="whoWeAre__btn">
+          <a class="whoWeAre__btn" name="whoWeAre-button">
             Let’s Talk Buisness
           </a>
         </div>
@@ -266,7 +268,7 @@ shield"
             half a billion of funding.
           </p>
 
-          <a class="works__btn">View all works</a>
+          <a class="works__btn" name="works-button">View all works</a>
         </div>
       </section>
 
@@ -296,15 +298,15 @@ shield"
 
             <ul class="link__list">
               <li class="link__item">
-                <a href="" class="link">UX Research</a>
+                <a href="" class="link" name="kmc-button">UX Research</a>
               </li>
 
               <li class="link__item">
-                <a href="" class="link">IOS</a>
+                <a href="" class="link" name="kmc-button">IOS</a>
               </li>
 
               <li class="link__item">
-                <a href="" class="link">B2B</a>
+                <a href="" class="link" name="kmc-button">B2B</a>
               </li>
             </ul>
           </div>
@@ -317,7 +319,7 @@ shield"
           />
         </div>
       </section>
-      
+
       <!-- Coinloan -->
       <section class="coinloan">
         <div class="container coinloan-container">
@@ -330,36 +332,36 @@ shield"
           </p>
           <ul class="coinloan__btn-list">
             <li class="coinloan__btn-list-item">
-              <a class="coinloan__list-btn">FinTech</a>
+              <a class="coinloan__list-btn" name="coinloan-button">FinTech</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <a class="coinloan__list-btn" >
+              <a class="coinloan__list-btn" name="coinloan-button" >
                 Front-end development
               </a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <a class="visually-hidden" >Research</a>
+              <a class="visually-hidden"  name="coinloan-button">Research</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <a class="coinloan__list-btn">Research</a>
+              <a class="coinloan__list-btn" name="coinloan-button">Research</a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <a class="coinloan__list-btn" >
+              <a class="coinloan__list-btn" name="coinloan-button" >
                 UX/UI Design
               </a>
             </li>
 
             <li class="coinloan__btn-list-item">
-              <a class="coinloan__list-btn">
+              <a class="coinloan__list-btn" name="coinloan-button">
                 Maintenance support
               </a>
             </li>
           </ul>
-          <a class="coinloan__btn">
+          <a class="coinloan__btn" name="coinloan-main-button">
             Read full case study
             <svg class="btn_icon" width="24" height="24">
               <use href="./images/icons.svg#plus"></use>
