--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   </head>
 
   <body>
+
+    
     <header class="header">
       <div class="container header-container">
         <svg class="logo" width="108" height="15">
@@ -56,7 +58,7 @@
         <div class="container hero-container">
           <div class="hero__top-wrap">
             <p class="uppertitle">our service solution</p>
-            <h1 class="title">Outstaffing services that make sense</h1>
+            <h1 class="title hero__title">Outstaffing services that make sense</h1>
             <p class="hero__text">
               Your offshore team of
               <strong>dedicated & skilled professionals</strong> that is always
